--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="Content-Security-Policy" content="default-src 'self'; script-src 'self' https://unpkg.com; style-src 'self' 'unsafe-inline'; img-src 'self' data:; connect-src 'self' wss:; object-src 'none'; frame-ancestors 'none'; upgrade-insecure-requests">
     <title>Hockey Stats Game - Dashboard Analytics</title>
     <link rel="stylesheet" href="src/styles.css">
 </head>
@@ -253,9 +254,9 @@
                 </div>
             </div>
 
-            <div id="public-rooms-list" style="max-height: 220px; overflow-y: auto; border: 2px solid #e2e8f0; border-radius: 8px; padding: 12px; margin-top: 12px; display: none; background: #ffffff; box-shadow: inset 0 2px 4px rgba(0, 0, 0, 0.02);">
-                <div style="font-size: 11px; font-weight: 600; color: #64748b; margin-bottom: 10px; letter-spacing: 0.5px; text-transform: uppercase; padding-bottom: 8px; border-bottom: 1px solid #f1f5f9;">Available Public Rooms</div>
-            </div>
+            <button id="browse-rooms-btn">Browse Public Rooms</button>
+
+            <div id="public-rooms-list" style="max-height: 220px; overflow-y: auto; border: 2px solid #e2e8f0; border-radius: 8px; padding: 12px; margin-top: 12px; display: none; background: #ffffff; box-shadow: inset 0 2px 4px rgba(0, 0, 0, 0.02);"></div>
         </div>
     </div>
 
